feat: styling & share functionallity added

--- a/packages/mocks/package.json
+++ b/packages/mocks/package.json
@@ -1,4 +1,7 @@
 {
   "name": "mocks",
-  "packageManager": "yarn@4.0.2"
+  "packageManager": "yarn@4.0.2",
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.0"
+  }
 }
